SUSTech/CS323/project/test/test_1/test_SQzjh35g.out
Error type B at Line 11: Missing semicolon ';'
Error type B at Line 12: Missing closing parenthesis ')'
Error type B at Line 13: Missing closing parenthesis ')'
Error type B at Line 13: Missing semicolon ';'
