SUSTech/CS323/project/test/test_1/test_SQzjh35g.spl
int a(int i, int j)
{
	j = -i;
	return j;
}

int test(){
	int i = 1;
	int j = 0;
	j = a(i,j);
	j = a(i, j)
	j = a(i,j;
	j = a(i,j
	return 0;
}